# ceng3548_spr24_msku

./: .gitignore  README.md  pyproject.toml
euroleague/: players.json  scrapy.cfg  teams.json
euroleague/euroleague/: items.py  middlewares.py  my_chart1.html  pipelines.py  settings.py  team_items_w5.json
euroleague/euroleague/spiders/: players.py
euroleague/facebook/: test1.py
project/: README.md
project/apis/boardgamegeek/: game.py  games.csv
project/apis/frankfurter/: main.py  scrap_data.py
project/highcharts/: app.py  chart1.html  nba_players.py
project/highcharts/static/: chart1.js
project/plotly/: chart.py
scrapy_examples/: scrapy.cfg  trendyol_comments.py
scrapy_examples/scrapy_examples/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_examples/scrapy_examples/spiders/: letterbox.py  malikinden.py
week3/: notes.md
week5/: README.md
week6/: README.md
