[tool.poetry]
name = "webmining"
version = "0.1.0"
description = ""
authors = ["SelahattinAksoy <selahattin2322@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
