[tool.poetry]
name = "webmining"
version = "0.1.0"
description = ""
authors = ["SelahattinAksoy <selahattin2322@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.11.1"
itemadapter = "^0.8.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
python-facebook-api = "^0.19.0"
dash = "^2.17.0"
pandas = "^2.2.2"
fastapi = "^0.111.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
